Adding some humor

--- a/index.html
+++ b/index.html
@@ -259,6 +259,20 @@
                   </div>
                 </div>
               </div>
+	      <div class="accordion-group">
+                <div class="accordion-heading">
+                  <a class="accordion-toggle" data-toggle="collapse"
+                     data-parent="#accordion2" href="#collapseThree">
+                    Can someone define 'cruft'?
+                  </a>
+                </div>
+                <div id="collapseThree" class="accordion-body collapse">
+                  <div class="accordion-inner">
+                    Who really knows? Just let it go.
+                  </div>
+                </div>
+              </div>
+
             </div>
           </div>
 
